--- a/Centos7/Vagrantfile
+++ b/Centos7/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure(2) do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://atlas.hashicorp.com/search.
-  config.vm.box = "https://github.com/CommanderK5/packer-centos-template/releases/download/0.6.7/vagrant-centos-6.7.box"
+  config.vm.box = "https://github.com/CommanderK5/packer-centos-template/releases/download/0.7.1/vagrant-centos-7.1.box"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -23,7 +23,6 @@ Vagrant.configure(2) do |config|
   # within the machine from a port on the host machine. In the example below,
   # accessing "localhost:8080" will access port 80 on the guest machine.
   # config.vm.network "forwarded_port", guest: 80, host: 8080
-  config.vm.network :forwarded_port, guest: 80, host: 8081
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
@@ -52,8 +51,8 @@ Vagrant.configure(2) do |config|
   #   vb.memory = "1024"
   # end
   config.vm.provider "virtualbox" do |vb|
-    vb.memory = 1024
-    vb.cpus = 1
+    vb.memory = 4096
+    vb.cpus = 4
   end
   #
   # View the documentation for the provider you are using for more
@@ -74,6 +73,9 @@ Vagrant.configure(2) do |config|
   #   sudo apt-get install -y apache2
   # SHELL
 
-  config.vm.provision "shell", path: "provision/setup.sh"
+  #config.vm.provision "shell", path: "provision/setup.sh"
+  config.vm.provision "chef_solo" do |chef|
+    chef.add_recipe "base"
+  end
 
 end
