--- a/Centos7/Vagrantfile
+++ b/Centos7/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure(2) do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://atlas.hashicorp.com/search.
-  config.vm.box = "https://github.com/CommanderK5/packer-centos-template/releases/download/0.7.1/vagrant-centos-7.1.box"
+  config.vm.box = "centos/7"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -51,8 +51,8 @@ Vagrant.configure(2) do |config|
   #   vb.memory = "1024"
   # end
   config.vm.provider "virtualbox" do |vb|
-    vb.memory = 4096
-    vb.cpus = 4
+    vb.memory = 2048
+    vb.cpus = 2
   end
   #
   # View the documentation for the provider you are using for more
@@ -73,7 +73,7 @@ Vagrant.configure(2) do |config|
   #   sudo apt-get install -y apache2
   # SHELL
 
-  #config.vm.provision "shell", path: "provision/setup.sh"
+  config.berkshelf.enabled = true
   config.vm.provision "chef_solo" do |chef|
     chef.add_recipe "base"
   end
